--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.6.1",
     "@types/jest": "^29.2.2",
     "@types/supertest": "^2.0.12",
+    "axios": "^1.2.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -37,7 +37,6 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
-    "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
