--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,3 +14,10 @@ uvicorn==0.19.0
 uvloop==0.17.0
 watchfiles==0.18.0
 websockets==10.3
+steamspypi~=1.1.1
+fuzzywuzzy~=0.18.0
+nltk~=3.5
+requests~=2.27.1
+beautifulsoup4~=4.11.1
+fastapi~=0.85.1
+pydantic~=1.10.2
