Adding unit tests for backend API, E2E test for react front end and fixed login issues

--- a/Front-End/game-recommender-client/.gitignore
+++ b/Front-End/game-recommender-client/.gitignore
@@ -50,5 +50,5 @@ yarn-error.log*
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 /node_modules
-/cypress/videos
-/cypress/screenshots
+cypress/screenshots/
+cypress/videos/
