--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
+    "test": "jest --watchAll --detectOpenHandles",
     "dev": "ts-node src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
@@ -15,7 +15,7 @@
   "dependencies": {
     "@types/jest": "^29.2.2",
     "@types/supertest": "^2.0.12",
-    "axios": "^1.2.0",
+    "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -25,6 +25,7 @@
     "jest": "^29.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
+    "mongodb-memory-server": "^8.10.1",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "supertest": "^6.3.1",
